# deeper_server

./: .gitmodules  CMS.md  README.md  client.bat  client.py  mix.exs
client/: CMakeLists.txt  imgui.ini
client/src/: api_client.cpp  api_client.h  main.cpp
config/: config.exs  dev.exs  test.exs
deeper_client/: index.html  script.js  style.css
lib/: deeper_server_web.ex
lib/deeper_server/: accounts.ex  blocks.ex  content.ex  media.ex  system.ex
lib/deeper_server/accounts/: profile.ex  role.ex  user.ex
lib/deeper_server/blocks/: block_type.ex  entry_block.ex
lib/deeper_server/content/: content_type.ex  entry.ex  layout.ex
lib/deeper_server/media/: media.ex
lib/deeper_server/system/: menu.ex  menu_item.ex
lib/deeper_server_web/: endpoint.ex  router.ex
lib/deeper_server_web/auth/: auth_guard.ex  token.ex
lib/deeper_server_web/controllers/api/v1/: block_type_controller.ex  block_type_json.ex  changeset_json.ex  content_type_controller.ex  content_type_json.ex  entry_block_controller.ex  entry_block_json.ex  entry_block_json.ex.bad  entry_controller.ex  entry_json.ex  error_json.ex  fallback_controller.ex  layout_controller.ex  layout_json.ex  media_controller.ex  media_json.ex  menu_controller.ex  menu_item_controller.ex  menu_item_json.ex  menu_json.ex  profile_controller.ex  profile_json.ex  role_controller.ex  role_json.ex  session_controller.ex  user_controller.ex
lib/deeper_server_web/views/api/v1/: user_json.ex
priv/repo/: reset_admin_password.exs  seeds.exs
priv/repo/migrations/: 20250614174925_create_accounts_schema.exs  20250614175721_create_content_foundations.exs  20250614175930_create_entries.exs  20250614182241_create_blocks.exs  20250614183216_create_menus_and_menu_items.exs  20250614184009_create_media.exs  20250614192830_fix_user_profile_relation.exs
resources/: ACiDview.7z
